<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F2F1"
    android:orientation="vertical"
    tools:context=".noticias.NoticiasActivity">
    <TextView
        android:id="@+id/textViewTituloNoticias"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="#E0F2F1"
        android:paddingTop="20dp"
        android:text="Noticias destacadas"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/noticia0RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noticia0" />

        <RadioButton
            android:id="@+id/noticia1RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/noticia1" />

        <RadioButton
            android:id="@+id/noticia2RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noticia2" />
    </RadioGroup>
</LinearLayout>